sample/error/e01112-1i.asn
E01112-1I DEFINITIONS ::=
BEGIN
    hs1 OCTET STRING ::= 'a0123456789ABCDEF'H  -- E01112-1I
    hs2 OCTET STRING ::= '0123456789ABCDEFG'H  -- E01112-1I
END
